@@ -71,9 +71,6 @@ push_byte(SerdReader* reader, Ref ref, const uint8_t c)
 	uint8_t* const  s    = serd_stack_push(&reader->stack, 1);
 	SerdNode* const node = (SerdNode*)(reader->stack.buf + ref);
 	++node->n_bytes;
-	if (!(c & 0x80)) {  // Starts with 0 bit, start of new character
-		++node->n_chars;
-	}
 	*(s - 1) = c;
 	*s       = '\0';
 	return SERD_SUCCESS;
