@@ -1,6 +1,7 @@
 serd (1.0.0) unstable;
 
   * Add SerdBuffer for mutable buffers to keep SerdChunk const-correct
+  * Remove useless character counting from API
 
  -- David Robillard <d@drobilla.net>  Sat, 19 Jan 2019 13:31:12 +0100
 
